@@ -791,11 +791,25 @@ class FteCalculatorUtilsTest {
     @Test
     void studentPreviouslyReportedInIndependentAuthority_SchoolIsNull_ReturnsFalse() {
         // Given
+        UUID schoolId = UUID.randomUUID();
+        final SchoolTombstone schoolTombstone = new SchoolTombstone();
+        schoolTombstone.setSchoolId(schoolId.toString());
+        schoolTombstone.setDistrictId(UUID.randomUUID().toString());
+        schoolTombstone.setIndependentAuthorityId(UUID.randomUUID().toString());
+        schoolTombstone.setDisplayName("Marco's school");
+        schoolTombstone.setMincode("03636018");
+        schoolTombstone.setSchoolNumber("36018");
+        schoolTombstone.setOpenedDate("1964-09-01T00:00:00");
+        schoolTombstone.setSchoolCategoryCode("PUBLIC");
+        schoolTombstone.setSchoolReportingRequirementCode("REGULAR");
+        schoolTombstone.setFacilityTypeCode("STANDARD");
+
         StudentRuleData sdcStudentSagaData = new StudentRuleData();
+        sdcStudentSagaData.setSchool(schoolTombstone);
         SdcSchoolCollectionStudentEntity student = new SdcSchoolCollectionStudentEntity();
         CollectionEntity collection = createMockCollectionEntity();
         collection.setCollectionTypeCode(CollectionTypeCodes.FEBRUARY.getTypeCode());
-        SdcSchoolCollectionEntity sdcSchoolCollectionEntity = createMockSdcSchoolCollectionEntity(collection, null);
+        SdcSchoolCollectionEntity sdcSchoolCollectionEntity = createMockSdcSchoolCollectionEntity(collection, schoolId);
         student.setSdcSchoolCollection(sdcSchoolCollectionEntity);
         student.setEnrolledGradeCode(SchoolGradeCodes.GRADE09.getCode());
         student.setCreateDate(LocalDateTime.now());
@@ -803,7 +817,7 @@ class FteCalculatorUtilsTest {
         sdcStudentSagaData.setSdcSchoolCollectionStudentEntity(student);
         sdcStudentSagaData.setHistoricStudentIds(List.of(UUID.fromString(getStudentMergeResult().getStudentID()), student.getAssignedStudentId()));
 
-        when(restUtils.getSchoolIDsByIndependentAuthorityID(anyString())).thenReturn(Optional.of(Collections.singletonList(UUID.randomUUID())));
+        when(restUtils.getSchoolIDsByIndependentAuthorityID(anyString())).thenReturn(Optional.of(List.of(schoolId)));
         when(sdcSchoolCollectionRepository.findSeptemberCollectionsForSchoolsForFiscalYearToCurrentCollection(anyList(), any(LocalDate.class), any(LocalDate.class))).thenReturn(Collections.emptyList());
         when(sdcSchoolCollectionRepository.findFebruaryCollectionsForSchoolsForFiscalYearToCurrentCollection(anyList(), any(LocalDate.class), any(LocalDate.class))).thenReturn(Collections.emptyList());
         when(sdcSchoolCollectionStudentRepository.countAllByAssignedStudentIdInAndSdcSchoolCollection_SdcSchoolCollectionIDInExcludingHomeschool(anyList(), anyList())).thenReturn(1L);
@@ -1433,7 +1447,7 @@ class FteCalculatorUtilsTest {
         studentRuleData.setHistoricStudentIds(List.of(UUID.fromString(getStudentMergeResult().getStudentID()), student.getAssignedStudentId()));
 
         when(restUtils.getAllSchoolTombstones()).thenReturn(List.of(schoolTombstone));
-        when(sdcSchoolCollectionStudentRepository.findStudentInCurrentFiscalWithInSameAuthority(anyList(), anyList(), anyString())).thenReturn(Collections.emptyList());
+        when(sdcSchoolCollectionStudentRepository.findStudentInCurrentFiscalWithInSameSchool(anyList(), anyList(), anyString())).thenReturn(Collections.emptyList());
 
         // When
         var result = fteCalculatorUtils.includedInCollectionThisSchoolYearForAuthWithNonZeroFteWithSchoolTypeNotOnline(studentRuleData);
@@ -1464,7 +1478,7 @@ class FteCalculatorUtilsTest {
         SdcSchoolCollectionStudentEntity sdcSchoolCollectionStudentEntity = studentRuleData.getSdcSchoolCollectionStudentEntity();
 
         when(restUtils.getAllSchoolTombstones()).thenReturn(List.of(schoolTombstone));
-        when(sdcSchoolCollectionStudentRepository.findStudentInCurrentFiscalWithInSameAuthority(anyList(), anyList(), anyString())).thenReturn(Collections.singletonList(sdcSchoolCollectionStudentEntity));
+        when(sdcSchoolCollectionStudentRepository.findStudentInCurrentFiscalWithInSameSchool(anyList(), anyList(), anyString())).thenReturn(Collections.singletonList(sdcSchoolCollectionStudentEntity));
 
         // When
         var result = fteCalculatorUtils.includedInCollectionThisSchoolYearForAuthWithNonZeroFteWithSchoolTypeNotOnline(studentRuleData);
@@ -1497,7 +1511,7 @@ class FteCalculatorUtilsTest {
 
         when(restUtils.getAllSchoolTombstones()).thenReturn(List.of(schoolTombstone));
         when(restUtils.getSchoolBySchoolID(String.valueOf(schoolId))).thenReturn(Optional.of(schoolTombstone));
-        when(sdcSchoolCollectionStudentRepository.findStudentInCurrentFiscalWithInSameAuthority(anyList(), anyList(), anyString())).thenReturn(List.of(student));
+        when(sdcSchoolCollectionStudentRepository.findStudentInCurrentFiscalWithInSameSchool(anyList(), anyList(), anyString())).thenReturn(List.of(student));
 
         // When
         var result = fteCalculatorUtils.includedInCollectionThisSchoolYearForAuthWithNonZeroFteWithSchoolTypeNotOnline(studentRuleData);
@@ -1616,7 +1630,7 @@ class FteCalculatorUtilsTest {
 
 
         when(restUtils.getAllSchoolTombstones()).thenReturn(List.of(schoolTombstone));
-        when(sdcSchoolCollectionStudentRepository.findStudentInCurrentFiscalWithInSameAuthority(anyList(), anyList(), anyString())).thenReturn(Collections.emptyList());
+        when(sdcSchoolCollectionStudentRepository.findStudentInCurrentFiscalWithInSameSchool(anyList(), anyList(), anyString())).thenReturn(Collections.emptyList());
 
         // When
         var result = fteCalculatorUtils.includedInCollectionThisSchoolYearForAuthWithNonZeroFteWithSchoolTypeOnlineInGradeKto9(studentRuleData);
@@ -1649,7 +1663,7 @@ class FteCalculatorUtilsTest {
         SdcSchoolCollectionStudentEntity sdcSchoolCollectionStudentEntity = studentRuleData.getSdcSchoolCollectionStudentEntity();
 
         when(restUtils.getAllSchoolTombstones()).thenReturn(List.of(schoolTombstone));
-        when(sdcSchoolCollectionStudentRepository.findStudentInCurrentFiscalWithInSameAuthority(anyList(), anyList(), anyString())).thenReturn(Collections.singletonList(sdcSchoolCollectionStudentEntity));
+        when(sdcSchoolCollectionStudentRepository.findStudentInCurrentFiscalWithInSameSchool(anyList(), anyList(), anyString())).thenReturn(Collections.singletonList(sdcSchoolCollectionStudentEntity));
 
         // When
         var result = fteCalculatorUtils.includedInCollectionThisSchoolYearForAuthWithNonZeroFteWithSchoolTypeOnlineInGradeKto9(studentRuleData);
@@ -1684,7 +1698,7 @@ class FteCalculatorUtilsTest {
 
         when(restUtils.getAllSchoolTombstones()).thenReturn(List.of(schoolTombstone));
         when(restUtils.getSchoolBySchoolID(String.valueOf(schoolId))).thenReturn(Optional.of(schoolTombstone));
-        when(sdcSchoolCollectionStudentRepository.findStudentInCurrentFiscalWithInSameAuthority(anyList(), anyList(), anyString())).thenReturn(List.of(student));
+        when(sdcSchoolCollectionStudentRepository.findStudentInCurrentFiscalWithInSameSchool(anyList(), anyList(), anyString())).thenReturn(List.of(student));
 
         // When
         var result = fteCalculatorUtils.includedInCollectionThisSchoolYearForAuthWithNonZeroFteWithSchoolTypeOnlineInGradeKto9(studentRuleData);
